--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@ngrx/store": "^1.0.0",
     "films-angular": "file:",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
