--- a/angular.json
+++ b/angular.json
@@ -55,6 +55,10 @@
           "defaultConfiguration": "production"
         },
         "serve": {
+          "options": {
+            "port": 4200
+          },
+
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
