added prime ng carousel + auth guard

--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@ngrx/operators": "^18.0.2",
     "@ngrx/signals": "^18.0.2",
+    "@primeng/themes": "^18.0.0",
     "@stomp/stompjs": "^7.0.0",
+    "frontend": "file:",
+    "primeng": "^18.0.0",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
     "swiper": "^11.1.15",
