--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
     "swiper": "^11.1.15",
+    "tailwindcss-primeui": "^0.3.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
